# SMO

./: CMakeLists.txt  main.cpp
include/: InputField.h  Logger.h  common.h  config.h  main_window.h  types.h
solution/: solution_base.cpp  solution_base.h
source/: InputField.cpp  logger.cpp  main_window.cpp
